# PARA

./: .env.example  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
docs/: ANON_ARTIFACT_README.md  DATA.md  EXPERIMENT_EVIDENCE_CATALOG.md  EXPERIMENT_INVENTORY.md  ICSE2027_COMPLIANCE_CHECK_20260627.md  PARA_ARCHITECTURE_DESCRIPTION.md  PARA_END_TO_END_CASE_FIGURE_DESCRIPTION.md  PUBLICATION_AND_ANONYMITY.md  PUBLIC_ARTIFACT_PACKAGE.md  REPOSITORY_SCOPE.md  REPRODUCIBILITY.md
figures/scripts/: make_final_figures.py  make_para_figures.py
figures/source_data/: direct_llm_ablation.csv  direct_query_answering_matched.csv  direct_rule_generation_ablation.csv  proof_audit_counterfactual.csv  (+2 more)
results/: README.md
scripts/: README.md  analyze_near_miss_negatives.py  analyze_structural_near_miss.py  audit_matched_inputs.py  audit_proof_traces.py  audit_reasoning_integrity.py  materialize_false_supported_case.py  materialize_proof_traces_fast.py  query_evidence.py  run_direct_llm_reasoning_ablation.py  run_direct_llm_suite.py  run_direct_query_answering.py  run_learn_then_reason.py  run_matched_popper_baseline.py  run_project_specific_spring_policy.py  run_proof_trace_audit_samples.py  run_recursive_idb_evaluation.py  run_stratified_agent_proof_audit.py  run_teammates_clean9_learn_then_reason.py  summarize_direct_query_answering.py  summarize_planner_evidence_ablation_20260621.py  summarize_revision_results.py  summarize_runtime_and_trace_stats.py
src/para/: bias.py  (+22 more)
tests/: test_proof_strategy_agent.py  test_public_example.py
(+99 files in other folders)
