[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "para-reasoning"
version = "0.1.0"
description = "Path Accountable Reasoning for Agentic Rule-Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PARA Authors"}]
keywords = ["neurosymbolic reasoning", "software architecture", "LLM", "proof traces"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
figures = ["matplotlib>=3.8", "pandas>=2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
para = "para.cli:main"

[project.urls]
Repository = "https://github.com/xiaoluo10086-arch/PARA"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
para = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
